2008-10-29  Alexander V. Lukyanov <lav@yars.free.net>

	* misc.cc, misc.h: (in_foreground_pgrp) new function.
	* lftp.cc: use in_foreground_pgrp.
	* ftpclass.cc: don't require ftp:acct when proxy settings provide an acct.

2008-10-01  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc: clone session properly - it fixed mirror -RP.
	* lftp_ssl.cc, lftp_ssl.h: (shutdown) new method.
	* ftpclass.cc, ftpclass.h: automatically try PROT P if enforced
	  by server.
	* buffer_ssl.cc, buffer_ssl.h: shutdown ssl when sending eof.

2008-08-23  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopyFtp.cc: add another timeout check.
	* SFtp.cc: don't ignore UNKNOWN type entries; add debug.

2008-08-15  Alexander V. Lukyanov <lav@yars.free.net>

	* ResMgr.cc, ResMgr.h: add number suffix support (i.e. 10k for 10240).
	* LsCache.cc, resource.cc: use new number suffixes.
	* ftpclass.cc: use new ResValue::to_number method.

2008-08-05  Alexander V. Lukyanov <lav@yars.free.net>

	* SMTask.cc, SMTask.h: add PrepareToDie virtual method.
	* FileAccess.cc, FileAccess.h, FileCopy.cc, FileCopy.h, GetFileInfo.cc,
	  GetFileInfo.h, SleepJob.cc, SleepJob.h, SysCmdJob.cc, SysCmdJob.h,
	  TreatFileJob.cc, TreatFileJob.h, echoJob.cc, echoJob.h, mgetJob.cc,
	  mgetJob.h: use PrepareToDie, use Refs.
	* buffer.cc, buffer.h: allow to make IOBufferFDStream with FDStream ref.
	* PtyShell.cc, PtyShell.h: use Refs.
	* Job.cc, Job.h: use const in RemoveWaiting.

2008-07-23  Alexander V. Lukyanov <lav@yars.free.net>

	* misc.cc: use gnulib's unsetenv.
	* SleepJob.cc, MirrorJob.cc: use gnulib's get_date.
	* Makefile.am: link only liblftp-tasks with gnulib.
	* DummyProto.cc: inc stddef.h.
	* FileAccess.cc: hook md5 and glob from gnulib.

2008-05-27  Alexander V. Lukyanov <lav@yars.free.net>

	* FileAccess.cc, pgetJob.cc: don't include unneeded headers;
	  move assert.h where needed.
	* PollVec.h: include poll.h with CDECL.

2008-05-23  Alexander V. Lukyanov <lav@yars.free.net>
